fix: Prevent text in lootbox title from wrapping

--- a/app/javascript/scss/elements/_lootbox.scss
+++ b/app/javascript/scss/elements/_lootbox.scss
@@ -83,6 +83,7 @@
   font-size: 1.5rem;
   color: $white;
   font-style: normal;
+  white-space: nowrap;
 
   strong {
     color: $primary;
